> COMMIT

# Created
- Table to display data @ history/index.tsx

# Refactored

# Imported

## TODO
- Displaying data (BETTER)
- Wrong Password Error redirects to Register Form

## NOTES
- Email Availability Checker @ Form Stepper 1