@@ -3,7 +3,7 @@ import { BrowserRouter, Route, Routes } from 'react-router-dom'
 import { Toaster } from 'react-hot-toast'
 
 import { InitialRoute, UserRoute } from './Routes'
-import { Login, Register, Dashboard, NotFound, History, Profile } from './Pages'
+import { Login, Register, Dashboard, NotFound, Records, Profile } from './Pages'
 
 const App: React.FC = () => {
   return (
@@ -17,7 +17,7 @@ const App: React.FC = () => {
         <Route path="/u" element={<UserRoute />}>
           <Route path="*" element={<NotFound />} />
           <Route path="dashboard" element={<Dashboard />} />
-          <Route path="history" element={<History />} />
+          <Route path="records" element={<Records />} />
           <Route path="profile" element={<Profile />} />
         </Route>
       </Routes>
