@@ -2,7 +2,7 @@ import Login from './Login'
 import Register from './Register'
 import NotFound from './NotFound'
 import Dashboard from './Dashboard'
-import History from './History'
+import Records from './Records'
 import Profile from './Profile'
 
-export { Login, Register, NotFound, Dashboard, History, Profile }
+export { Login, Register, NotFound, Dashboard, Records, Profile }
